--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,14 @@
     "extra": {
         "branch-alias": {
             "dev-master": "5.0-dev"
+        },
+        "royalcms": {
+            "providers": [
+                "Royalcms\\Component\\Service\\ServiceServiceProvider"
+            ],
+            "aliases": {
+                "RC_Service": "Royalcms\\Component\\Service\\Facades\\Service"
+            }
         }
     },
     "minimum-stability": "dev"
